# holo-pos

./: app.json  bundle.json  bundle.json.bak  erl_crash.dump
test/: index.js
zomes/pos/: zome.json
zomes/pos/code/: .build  Cargo.toml
zomes/pos/code/src/: lib.rs
