[package]
name = "pos"
version = "0.1.0"
authors = ["nduitz <nick.duitz@9elements.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.5"
hdk = { git = "https://github.com/nduitz/holochain-rust/" , branch = "master" }
holochain_wasm_utils = { git = "https://github.com/nduitz/holochain-rust" , branch = "master" }
holochain_core_types_derive = { git = "https://github.com/nduitz/holochain-rust" , branch = "master" }


[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
